--- a/index.html
+++ b/index.html
@@ -2,11 +2,72 @@
 <html lang="fr">
 	<head>
 		<meta charset="utf-8">
-	  	<title>Titre de la page</title>
+	  	<title>Malwar Attack</title>
 	  	<link rel="stylesheet" href="css/style.css">
 	  	<script src="script.js"></script>
 	</head>
 	<body>
+
+		<div class="arriere-plan">
+
+			<div class="plateau-contour">
+				<div class="ligne">
+					<div class="case case-pair" data-x="1" data-y="1"></div>
+					<div class="case case-impair" data-x="1" data-y="2"></div>
+					<div class="case case-pair" data-x="1" data-y="3"></div>
+					<div class="case case-impair" data-x="1" data-y="4"></div>
+					<div class="case case-pair" data-x="1" data-y="5"></div>
+					<div class="case case-impair" data-x="1" data-y="6"></div>
+					<div class="case case-pair" data-x="1" data-y="7"></div>
+					<div class="case case-impair data-x="1" data-y="8""></div>
+					<div class="case case-pair" data-x="1" data-y="9"></div>
+				</div>
+				<div class="ligne">
+					<div class="case case-impair" data-x="2" data-y="1"></div>
+					<div class="case case-pair" data-x="2" data-y="2"></div>
+					<div class="case case-impair" data-x="2" data-y="3"></div>
+					<div class="case case-pair" data-x="2" data-y="4"></div>
+					<div class="case case-impair" data-x="2" data-y="5"></div>
+					<div class="case case-pair" data-x="2" data-y="6"></div>
+					<div class="case case-impair" data-x="2" data-y="7"></div>
+					<div class="case case-pair" data-x="2" data-y="8"></div>
+					<div class="case case-impair" data-x="2" data-y="9"></div>
+				</div>
+				<div class="ligne">
+					<div class="case case-pair" data-x="3" data-y="1"></div>
+					<div class="case case-impair" data-x="3" data-y="2"></div>
+					<div class="case case-pair" data-x="3" data-y="3"></div>
+					<div class="case case-impair" data-x="3" data-y="4"></div>
+					<div class="case case-pair" data-x="3" data-y="5"></div>
+					<div class="case case-impair" data-x="3" data-y="6"></div>
+					<div class="case case-pair" data-x="3" data-y="7"></div>
+					<div class="case case-impair data-x="3" data-y="8""></div>
+					<div class="case case-pair" data-x="3" data-y="9"></div>
+				</div>
+				<div class="ligne">
+					<div class="case case-impair" data-x="4" data-y="1"></div>
+					<div class="case case-pair" data-x="4" data-y="2"></div>
+					<div class="case case-impair" data-x="4" data-y="3"></div>
+					<div class="case case-pair" data-x="4" data-y="4"></div>
+					<div class="case case-impair" data-x="4" data-y="5"></div>
+					<div class="case case-pair" data-x="4" data-y="6"></div>
+					<div class="case case-impair" data-x="4" data-y="7"></div>
+					<div class="case case-pair" data-x="4" data-y="8"></div>
+					<div class="case case-impair" data-x="4" data-y="9"></div>
+				</div>
+				<div class="ligne">
+					<div class="case case-pair" data-x="5" data-y="1"></div>
+					<div class="case case-impair" data-x="5" data-y="2"></div>
+					<div class="case case-pair" data-x="5" data-y="3"></div>
+					<div class="case case-impair" data-x="5" data-y="4"></div>
+					<div class="case case-pair" data-x="5" data-y="5"></div>
+					<div class="case case-impair" data-x="5" data-y="6"></div>
+					<div class="case case-pair" data-x="5" data-y="7"></div>
+					<div class="case case-impair data-x="5" data-y="8""></div>
+					<div class="case case-pair" data-x="5" data-y="9"></div>
+				</div>
+			</div>
+		</div>
 
 
 	</body>
