--- a/index.html
+++ b/index.html
@@ -5,10 +5,35 @@
 	  	<title>Malwar Attack</title>
 	  	<link rel="stylesheet" href="css/style.css">
 	  	<script src="script.js"></script>
+	  	
 	</head>
 	<body>
 
 		<div class="arriere-plan">
+
+			<div class="menu-header">
+
+				<div class="bitcoin"><img style="width:40px; height:40px;  margin-top:5px;" src="images/bitcoin.png">000</div>
+
+				<div class="vague">Vague : 00</div>
+
+				<div class="person developper"><img style="width:40px; height:40px; margin-top:5px;" src="images/stagiaire.png">000</div>
+
+				<div class="person nerd"><img style="width:40px; height:40px; margin-top:5px;" src="images/stagiaire.png">000
+				</div>
+
+				<div class="person startup"><img style="width:40px; height:40px; margin-top:5px;" src="images/stagiaire.png">000
+				</div>
+
+				<div class="person antivirus"><img style="width:40px; height:40px; margin-top:5px;" src="images/stagiaire.png">000
+				</div>
+
+				<div class="person stagiaire"><img style="width:40px; height:40px; margin-top:5px;" src="images/stagiaire.png">000
+				</div>
+
+				<div class="menu">Menu</div>
+
+			</div>
 
 			<div class="plateau-contour">
 				<div class="ligne">
@@ -19,7 +44,7 @@
 					<div class="case case-pair" data-x="1" data-y="5"></div>
 					<div class="case case-impair" data-x="1" data-y="6"></div>
 					<div class="case case-pair" data-x="1" data-y="7"></div>
-					<div class="case case-impair data-x="1" data-y="8""></div>
+					<div class="case case-impair" data-x="1" data-y="8"></div>
 					<div class="case case-pair" data-x="1" data-y="9"></div>
 				</div>
 				<div class="ligne">
@@ -41,7 +66,7 @@
 					<div class="case case-pair" data-x="3" data-y="5"></div>
 					<div class="case case-impair" data-x="3" data-y="6"></div>
 					<div class="case case-pair" data-x="3" data-y="7"></div>
-					<div class="case case-impair data-x="3" data-y="8""></div>
+					<div class="case case-impair" data-x="3" data-y="8"></div>
 					<div class="case case-pair" data-x="3" data-y="9"></div>
 				</div>
 				<div class="ligne">
@@ -63,7 +88,7 @@
 					<div class="case case-pair" data-x="5" data-y="5"></div>
 					<div class="case case-impair" data-x="5" data-y="6"></div>
 					<div class="case case-pair" data-x="5" data-y="7"></div>
-					<div class="case case-impair data-x="5" data-y="8""></div>
+					<div class="case case-impair" data-x="5" data-y="8"></div>
 					<div class="case case-pair" data-x="5" data-y="9"></div>
 				</div>
 			</div>
